force-app/main/default/objects/Project__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Project Name</label>
    <description>The full name of the project as used by the project team.</description>
    <inlineHelpText>Enter the official name of the project (e.g., "Website Redesign 2025").</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>