force-app/main/default/objects/Project__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <label>Project Number</label>
    <description>Auto-generated unique identifier for each project record.</description>
    <inlineHelpText>Automatically assigned when the project is created. Format: PRJ-0001.</inlineHelpText>
    <type>AutoNumber</type>
    <displayFormat>PRJ-{0000}</displayFormat>
    <startingNumber>1</startingNumber>
</CustomField>