force-app/main/default/objects/Project__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <description>The date on which the project is scheduled to begin.</description>
    <inlineHelpText>Enter the planned start date for this project.</inlineHelpText>
    <type>Date</type>
</CustomField>